namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: totp
    labels:
        name: totp
