mysql.yml
apiVersion: v1
kind: Service
metadata:
    name: mysql
spec:
    selector:
        app: mysql
    ports:
        -
            protocol: TCP
            port: 3306
            targetPort: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mysql
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mysql
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
                -
                    name: mysql
                    image: mariadb:latest
                    ports:
                        - containerPort: 3306
                    volumeMounts:
                        -
                            name: mysql-storage
                            mountPath: /var/lib/mysql
                            subPath: mysql
            volumes:
                -
                    name: mysql-storage
                    persistentVolumeClaim:
                        claimName: mysql-storage
