nginx.yml
apiVersion: v1
kind: Service
metadata:
    name: nginx

spec:
    type: ClusterIP
    selector:
        app: nginx
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nginx
    
    template:
        metadata:
            labels:
                app: nginx

        spec:
            containers:
                -
                    name: nginx
                    image: nginx:latest
                    ports:
                        -
                            containerPort: 80
                    volumeMounts:
                        -
                            name: nginx-config
                            mountPath: /etc/nginx/conf.d/default.conf
                            subPath: default.conf

            volumes:
                -
                    name: nginx-config
                    configMap:
                        name: nginx-config
                        items:
                            -
                                key: default.conf
                                path: default.conf
