php.yml
apiVersion: v1
kind: Service
metadata:
    name: php

spec:
    type: ClusterIP
    selector:
        app: php
    ports:
        - protocol: TCP
          port: 9000
          targetPort: 9000


---


apiVersion: apps/v1
kind: Deployment
metadata:
    name: php

spec:
    replicas: 1
    selector:
        matchLabels:
            app: php
    
    template:
        metadata:
            labels:
                app: php

        spec:
            containers:
                -
                    name: php
                    image: drajver5siti/totp-php
                    ports:
                        -
                            containerPort: 9000
