ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx
    annotations:
        ingress.kubernetes.io/ssl-redirect: "true"
spec:
    tls:
        - hosts:
            - "ib-proekt.com"
        - secretName: ip-proekt-certs

    rules:
        - 
            host: "ib-proekt.com"
            http:
                paths:
                    -
                        path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: nginx
                                port:
                                    number: 80
